--- a/client/package.json
+++ b/client/package.json
@@ -7,15 +7,18 @@
     "@emotion/react": "^11.10.6",
     "@headlessui/react": "^1.7.12",
     "@heroicons/react": "^2.0.16",
-    "@mantine/core": "^6.0.2",
+    "@mantine/core": "^6.0.4",
+    "@mantine/dates": "^6.0.4",
     "@mantine/ds": "^6.0.2",
     "@mantine/form": "^6.0.2",
-    "@mantine/hooks": "^6.0.2",
+    "@mantine/hooks": "^6.0.4",
+    "@tabler/icons-react": "^2.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@windmill/react-ui": "^0.6.0",
     "axios": "^1.3.4",
+    "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-cookie": "^4.1.1",
