--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "server",
+  "name": "Decentralized-Healthcare-Information-Exchange",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch app.js"
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
